<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.quang.ex1.SettingFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSelectAva"
        android:background="@drawable/border"
        android:text="@string/profile_picture"
        android:textAllCaps="false"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:drawableRight="@drawable/ic_leftarrow"
        android:textSize="20sp"
        android:layout_marginTop="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEmail"
            android:background="@drawable/border"
            android:text="@string/email"
            android:textAllCaps="false"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnUserName"
            android:background="@drawable/border"
            android:text="@string/username"
            android:textAllCaps="false"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnHelpCenter"
            android:background="@drawable/border"
            android:text="@string/help_center"
            android:textAllCaps="false"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnReport"
            android:background="@drawable/border"
            android:text="@string/report_a_bug"
            android:textAllCaps="false"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/border"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:padding="5dp"
        android:text="@string/version"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/border"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:padding="5dp"
        android:text="@string/log_out"/>


</LinearLayout>