<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.quang.ex1.LogIn">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_your_email"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/edtUserEmail"
        android:id="@+id/textView5" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/edtUserEmail"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/edtPassword"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/edtPassword"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/edtPassword"
        android:id="@+id/btnLogIn"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewPassWord"
        android:layout_alignBottom="@+id/textViewPassWord"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="5dp"
        android:text="@string/forgot_your"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView4"
        android:text="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textViewPassWord"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="?"
        android:layout_below="@+id/btnLogIn"
        android:layout_marginStart="5dp"
        android:id="@+id/textView3" />

</RelativeLayout>
