<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.quang.ex1.DictionaryFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:elevation="5dp"
        android:gravity="center|top"
        android:text="@string/dictionary"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" 
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/edtWord"
            android:hint="@string/input_word"
            android:textColorHighlight="@color/colorPrimaryDark"/>
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:background="@color/colorPrimaryLight"
            android:src="@drawable/ic_search"
            android:elevation="2dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/defintions_of_word"/>

</LinearLayout>
